Fixed update details page

--- a/accounts/templates/registration/account.html
+++ b/accounts/templates/registration/account.html
@@ -59,8 +59,8 @@ Account
                 <div class="panel single-accordion">
                     <h6><a role="button" class="collapsed" aria-expanded="true" aria-controls="collapseOne" data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
                         Update Username
-                            <span class="accor-open"><i class="fa fa-plus" aria-hidden="true"></i></span>
-                            <span class="accor-close"><i class="fa fa-minus" aria-hidden="true"></i></span>
+                            <span class="accor accor-open"><i class="fa fa-plus" aria-hidden="true"></i></span>
+                            <span class="accor accor-close"><i class="fa fa-minus" aria-hidden="true"></i></span>
                             </a></h6>
                     <div id="collapseOne" class="accordion-content collapse">
                         <form action="{% url 'accounts:update_username' %}" method='POST' class="form-signin">
@@ -82,8 +82,8 @@ Account
                     <h6>
                         <a role="button" class="collapsed" aria-expanded="true" aria-controls="collapseTwo" data-parent="#accordion" data-toggle="collapse" href="#collapseTwo">
                             Update Email Address
-                                <span class="accor-open"><i class="fa fa-plus" aria-hidden="true"></i></span>
-                                <span class="accor-close"><i class="fa fa-minus" aria-hidden="true"></i></span>
+                                <span class="accor accor-open"><i class="fa fa-plus" aria-hidden="true"></i></span>
+                                <span class="accor accor-close"><i class="fa fa-minus" aria-hidden="true"></i></span>
                                 </a>
                     </h6>
                     <div id="collapseTwo" class="accordion-content collapse">
@@ -106,8 +106,8 @@ Account
                     <h6>
                         <a role="button" aria-expanded="true" aria-controls="collapseThree" class="collapsed" data-parent="#accordion" data-toggle="collapse" href="#collapseThree">
                             Update Password
-                                <span class="accor-open"><i class="fa fa-plus" aria-hidden="true"></i></span>
-                                <span class="accor-close"><i class="fa fa-minus" aria-hidden="true"></i></span>
+                                <span class="accor accor-open"><i class="fa fa-plus" aria-hidden="true"></i></span>
+                                <span class="accor accor-close"><i class="fa fa-minus" aria-hidden="true"></i></span>
                             </a>
                     </h6>
                     <div id="collapseThree" class="accordion-content collapse">
