--- a/static/scss/style.scss
+++ b/static/scss/style.scss
@@ -900,7 +900,16 @@ textarea:focus {
     position: relative;
     z-index: 2;
     width: 100%;
-    height: 675px;
+    height: 110vh;
+    @media #{$breakpoint-lg} {
+        height: 125vh;
+    }
+    @media #{$breakpoint-md} {
+        height: 135vh;
+    }
+    @media #{$breakpoint-xs} {
+        height: 150vh;
+    }
     background-attachment: fixed;
     .cta-content {
         h2 {
@@ -1433,7 +1442,7 @@ textarea:focus {
 
 .follow-us-instagram {
     position: relative;
-    z-index: 2;
+    z-index: 1;
     border-top: 1px solid #dcdcdc;
     h5 {
         font-size: 18px;
@@ -1630,6 +1639,7 @@ textarea:focus {
         border-radius: 4px;
         box-shadow: 0 0 0 transparent;
         margin-bottom: 15px;
+        height: fit-content;
     }
     &:last-of-type {
         margin-bottom: 0;
@@ -1685,10 +1695,20 @@ textarea:focus {
     }
     .accordion-content {
         border-top: 0 solid transparent;
+        border-bottom: medium solid $hover-color;
+        border-left: medium solid $hover-color;
+        border-right: medium solid $hover-color;
         box-shadow: none;
+        padding: 20px;
         p {
             padding: 20px 15px 5px;
             margin-bottom: 0;
+        }
+        @media #{$breakpoint-md} {
+            padding: 10px;
+        }
+        @media #{$breakpoint-xs} {
+            padding: 5px;
         }
     }
 }
