--- a/static/style.css
+++ b/static/style.css
@@ -912,8 +912,23 @@ textarea:focus {
   position: relative;
   z-index: 2;
   width: 100%;
-  height: 675px;
+  height: 110vh;
   background-attachment: fixed;
+}
+@media only screen and (min-width:992px) and (max-width:1199px) {
+  .cta-area {
+    height: 125vh;
+  }
+}
+@media only screen and (min-width:768px) and (max-width:991px) {
+  .cta-area {
+    height: 135vh;
+  }
+}
+@media only screen and (max-width:767px) {
+  .cta-area {
+    height: 150vh;
+  }
 }
 .cta-area .cta-content h2 {
   font-size: 72px;
@@ -1449,7 +1464,7 @@ textarea:focus {
 
 .follow-us-instagram {
   position: relative;
-  z-index: 2;
+  z-index: 1;
   border-top: 1px solid #dcdcdc;
 }
 .follow-us-instagram h5 {
@@ -1661,6 +1676,7 @@ textarea:focus {
   border-radius: 4px;
   box-shadow: 0 0 0 transparent;
   margin-bottom: 15px;
+  height: fit-content;
 }
 .single-accordion:last-of-type {
   margin-bottom: 0;
@@ -1711,11 +1727,25 @@ textarea:focus {
 }
 .single-accordion .accordion-content {
   border-top: 0 solid transparent;
+  border-bottom: medium solid #40ba37;
+  border-left: medium solid #40ba37;
+  border-right: medium solid #40ba37;
   box-shadow: none;
+  padding: 20px;
 }
 .single-accordion .accordion-content p {
   padding: 20px 15px 5px;
   margin-bottom: 0;
+}
+@media only screen and (min-width:768px) and (max-width:991px) {
+  .single-accordion .accordion-content {
+    padding: 10px;
+  }
+}
+@media only screen and (max-width:767px) {
+  .single-accordion .accordion-content {
+    padding: 5px;
+  }
 }
 
 /* Tabs CSS*/
