--- a/static/style.css
+++ b/static/style.css
@@ -1388,12 +1388,13 @@ textarea:focus {
 }
 .ingredients .custom-control {
   padding-left: 2.5rem;
-  margin-bottom: 30px;
+  margin-bottom: 10px;
   min-height: 35px;
 }
 .ingredients .custom-control-label {
   margin-bottom: 0;
   padding-top: 5px;
+  padding-left: 35px;
   font-size: 16px;
   font-weight: 600;
   color: #2f2f2f;
