--- a/recipes/templates/recipes/recipe.html
+++ b/recipes/templates/recipes/recipe.html
@@ -25,8 +25,8 @@ Recipe
 <div class="receipe-content-area">
     <div class="container">
 
-        <div class="row">
-            <div class="col-12 col-md-8">
+        <div class="row align-items-end">
+            <div class="col-12 col-md-5">
                 <div class="receipe-headline my-5">
                     <span><a href="{{ recipe.source_url }}">{% if recipe.credit %}{{ recipe.credit }}{% else %}click here for source{% endif %}</a></span>
                     <h2>{{ recipe.title }}</h2>
@@ -38,9 +38,28 @@ Recipe
                     </div>
                 </div>
             </div>
+            <div class="col-12 col-md-3">
+                <div class="receipe-headline my-5">
+                <form id="addtolikedform" method="POST" onsubmit="addtoliked('{{ recipe.api_id }}'); return false;">
+                {% csrf_token %}
+                <div class="form-row">
+                    <div class="col-12">
+                        <button type="submit" class="btn btn-4 delicious-btn" title="Click here to add to MyLikedRecipes"><i class="fas fa-heart"></i></button>
+                        <div id="addsuccess" class="valid-tooltip" style="display: none;">
+                            Added to MyLikedRecipes
+                            </div>
+                            <div id="adderror" class="invalid-tooltip" style="display: none;">
+                            </div> 
+                    </div>
+                </div>
+                </form>
+                </div>
+            </div>
 
             <div class="col-12 col-md-4">
+                <div class="receipe-headline my-5">
                 <img class="img-fluid mx-auto d-block" src="{{ recipe.image }}" alt="recipe picture">
+                </div>
             </div>
         </div>
 
@@ -81,5 +100,5 @@ Recipe
         {% endif %}
     </div>
 </div>
-
+<script src="{% static 'js/recipe.js' %}"></script>
 {% endblock %}
