--- a/recipes/templates/recipes/myrecipe.html
+++ b/recipes/templates/recipes/myrecipe.html
@@ -8,15 +8,16 @@ MyRecipes
 
 {% block body %}
 <!-- ##### CTA Area Start ##### -->
-<section class="cta-area bg-img bg-overlay" style="background-image: url({% static 'img/bg-img/sr9.jpg' %});">
+<section class="cta-area bg-img bg-overlay" style="background-image: url({% static 'img/bg-img/bg6.jpg' %});">
     <div class="container h-100">
         <div class="row h-100 align-items-center">
             <div class="col-12">
                 <!-- Cta Content -->
                 <div class="cta-content text-center">
                     <h2>MyRecipes</h2>
-                    <p>You can find all your liked recipes and add your own recipes here.</p>
+                    <p>Find all liked recipes and add own recipes here.</p>
                     <a href="{% url 'recipes:search_recipes' %}" class="btn delicious-btn">Search Recipes</a>
+                   
                 </div>
             </div>
         </div>
